<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_photo"
        app:layout_constraintBottom_toTopOf="@id/choose_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.35" />

    <TextView
        android:id="@+id/choose_location"
        style="@style/TextAppearance.MdcTypographyStyles.Overline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_cyan_rounded_corners"
        android:elevation="4dp"
        android:padding="16dp"
        android:text="@string/choose_location"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        tools:text="Choose location to start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_location"
        app:layout_constraintVertical_weight="0.6" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/cyan_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_location" />

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/noun_loading_failed_1856610"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_location" />

    <TextView
        android:id="@+id/error_text"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/could_not_load_data"
        android:textColor="@color/grey_600"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_icon" />

    <TextView
        android:id="@+id/try_again"
        style="@style/TextAppearance.MdcTypographyStyles.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_text" />

</androidx.constraintlayout.widget.ConstraintLayout>